[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/tiles/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/WelcomeHUD.gd" type="Script" id=2]
[ext_resource path="res://scenes/models/AudioHUD.gd" type="Script" id=3]
[ext_resource path="res://fonts/crackman/crackman.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/minecraft-evenings/Minecraft Evenings.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/models/DifficultyHUD.gd" type="Script" id=6]
[ext_resource path="res://scenes/models/OptionsHUD.gd" type="Script" id=7]
[ext_resource path="res://sounds/bensound-house.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/error_003.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/models/GameOverHUD.gd" type="Script" id=10]
[ext_resource path="res://scenes/menu/Main.gd" type="Script" id=11]
[ext_resource path="res://fonts/no-continue/gomarice_no_continue.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scenes/menu/KeyMaps.gd" type="Script" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 256, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 70
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 70
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=20]
size = 70
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=19]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=16]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 11 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="WelcomeHUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="GameName" type="Label" parent="WelcomeHUD"]
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 380.0
margin_top = 150.0
margin_right = 648.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 3 )
text = "Minion 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="WelcomeHUD"]
margin_left = 451.0
margin_top = 287.0
margin_right = 572.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 4 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="WelcomeHUD"]
margin_left = 451.031
margin_top = 347.0
margin_right = 588.031
margin_bottom = 391.0
custom_fonts/font = SubResource( 5 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsHUD" type="CanvasLayer" parent="WelcomeHUD"]
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="OptionName" type="Label" parent="WelcomeHUD/OptionsHUD"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 366.507
margin_top = 150.0
margin_right = 679.507
margin_bottom = 235.0
custom_fonts/font = SubResource( 7 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.031
margin_top = 455.828
margin_right = 588.031
margin_bottom = 499.828
custom_fonts/font = SubResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.0
margin_top = 287.0
margin_right = 588.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.0
margin_top = 343.353
margin_right = 588.0
margin_bottom = 387.353
custom_fonts/font = SubResource( 6 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyMapButton" type="Button" parent="WelcomeHUD/OptionsHUD"]
visible = false
margin_left = 451.0
margin_top = 399.567
margin_right = 588.0
margin_bottom = 443.567
custom_fonts/font = SubResource( 6 )
text = "Key Map"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DifficultyHUD" type="CanvasLayer" parent="WelcomeHUD/OptionsHUD"]
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="DifficultyLabel" type="Label" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 312.535
margin_top = 149.364
margin_right = 728.535
margin_bottom = 234.364
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.871
margin_top = 269.175
margin_right = 588.871
margin_bottom = 313.175
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.952941, 0.913725, 0.0588235, 1 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.463
margin_top = 330.874
margin_right = 588.463
margin_bottom = 374.874
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.168627, 0.698039, 0.278431, 1 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="WelcomeHUD/OptionsHUD/DifficultyHUD"]
visible = false
margin_left = 451.077
margin_top = 393.175
margin_right = 588.077
margin_bottom = 437.175
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.65098, 0.12549, 0.12549, 1 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioHUD" type="CanvasLayer" parent="WelcomeHUD/OptionsHUD"]
script = ExtResource( 3 )

[node name="AudioLabel" type="Label" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 405.0
margin_top = 151.0
margin_right = 634.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiamondSoundBtn" type="Button" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 451.871
margin_top = 269.175
margin_right = 588.871
margin_bottom = 313.175
custom_fonts/font = SubResource( 13 )
text = "Diamond"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSoundBtn" type="Button" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 451.463
margin_top = 330.874
margin_right = 593.463
margin_bottom = 374.874
custom_fonts/font = SubResource( 14 )
text = "Background"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButtonAudio" type="Button" parent="WelcomeHUD/OptionsHUD/AudioHUD"]
visible = false
margin_left = 454.206
margin_top = 393.035
margin_right = 591.206
margin_bottom = 437.035
custom_fonts/font = SubResource( 15 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyMaps" type="CanvasLayer" parent="WelcomeHUD/OptionsHUD"]
script = ExtResource( 13 )

[node name="KeyMapLabel" type="Label" parent="WelcomeHUD/OptionsHUD/KeyMaps"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 405.0
margin_top = 151.0
margin_right = 698.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Key Map"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="keys" type="Label" parent="WelcomeHUD/OptionsHUD/KeyMaps"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
margin_left = 443.055
margin_top = 273.488
margin_right = 861.055
margin_bottom = 640.488
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "pause: escape
reload: r
jump: space
dash: shift
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButtonKeyMap" type="Button" parent="WelcomeHUD/OptionsHUD/KeyMaps"]
visible = false
margin_left = 455.395
margin_top = 419.198
margin_right = 592.395
margin_bottom = 463.198
custom_fonts/font = SubResource( 19 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 8 )

[node name="GamerOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="GameOverHUD" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="GameOver" type="Label" parent="GameOverHUD"]
visible = false
modulate = Color( 0.67451, 0.27451, 0.137255, 1 )
anchor_right = 0.533
margin_left = 320.0
margin_top = 220.0
margin_right = 178.208
margin_bottom = 305.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.992157, 0.988235, 0.988235, 1 )
text = "game over"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="GameOverHUD"]
visible = false
margin_left = 494.45
margin_top = 343.353
margin_right = 574.45
margin_bottom = 387.353
custom_fonts/font = SubResource( 17 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="WelcomeHUD/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsButton" to="WelcomeHUD" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/BackButton" to="WelcomeHUD" method="_on_BackButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyButton" to="WelcomeHUD/OptionsHUD" method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioButton" to="WelcomeHUD/OptionsHUD" method="_on_AudioButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/KeyMapButton" to="WelcomeHUD/OptionsHUD" method="_on_KeyMapButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Easy" to="WelcomeHUD/OptionsHUD" method="_on_Easy_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Normal" to="WelcomeHUD/OptionsHUD" method="_on_Normal_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/DifficultyHUD/Hard" to="WelcomeHUD/OptionsHUD" method="_on_Hard_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioHUD/BackgroundSoundBtn" to="WelcomeHUD/OptionsHUD" method="_on_BackgroundSoundBtn_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/AudioHUD/BackButtonAudio" to="WelcomeHUD/OptionsHUD" method="_on_BackButtonAudio_pressed"]
[connection signal="pressed" from="WelcomeHUD/OptionsHUD/KeyMaps/BackButtonKeyMap" to="WelcomeHUD/OptionsHUD" method="_on_BackButtonKeyMap_pressed"]
[connection signal="pressed" from="GameOverHUD/Menu" to="." method="_on_Menu_pressed"]
